fix layout issue with paginated lists, fixes #10890

--- a/app/assets/stylesheets/hitobito/_navigation.scss
+++ b/app/assets/stylesheets/hitobito/_navigation.scss
@@ -134,6 +134,7 @@
 }
 
 .pagination-bar {
+  overflow: hidden;
 
   .pagination {
     margin-right: 20px;
